<resources>
    <string name="app_name">SharpNode</string>

    //Constant Strings======
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="MessagePleaseWait">Please wait...</string>
    <string name="MessageNoInternetConnection">Please check internet connection.</string>

    //Left Panel Strings
    <string name="LeftPanelHome">Home</string>
    <string name="LeftPanelSettings">Settings</string>
    <string name="LeftPanelWidgetSettings">AppWidget Settings</string>
    <string name="LeftPanelAccountSettings">Account Settings</string>
    <string name="LeftPanelInsights">Insights</string>
    <string name="LeftPanelIftttConfig">IFTTT Config</string>
    <string name="LeftPanelAppliances">Appliances</string>
    <string name="LeftPanelLiveCamera">Live Camera</string>
    <string name="LeftPanelUserManuals">User Manual</string>
    <string name="LeftPanelContactUs">Contact Us</string>
    <string name="LeftPanelLogout">Logout</string>
    <string name="LeftPanelDeviceManual">My Devices</string>
    <string name="DeviceSetup">Device Setup</string>
    <string name="Control">Control</string>
    <string name="Remote">Remote</string>
    <string name="Camera">Camera</string>
    <string name="Notifications">Notifications</string>
    //Appliances Screen Strings
    <string name="ApplianceFan">Fan</string>
    <string name="ApplianceCfl">CFL</string>
    <string name="ApplianceLamp">Lamp</string>
    <string name="ApplianceAC">A.C.</string>
    <string name="ApplianceWP">W.P.</string>
    <string name="AppliancePrint">Print</string>
    <string name="ApplianceTV">TV</string>
    <string name="ApplianceMusic">Music</string>
    <string name="ApplianceWashingMachine">Washing Machine</string>
    <string name="Appliance_xyz2">Xyz2</string>

    // Landing Screen strings
    <string name="CommonLogin">Login</string>
    <string name="SingUpSignUpBtn">Sign Up</string>
    <string name="LandingPageTagLine">SharpNode Makes it Easier to Manage your home appliances with the help of your Smart phone.</string>
    <string name="LandingSimpleLandingPage">Simple Landing Page</string>
    <string name="LandingSignUpBtn">SignUp</string>

    // SignUp Screen strings
    <string name="SignUpCreateAccount">Create an Account</string>
    <string name="CommonName">Name</string>
    <string name="CommonEmailID">Email ID</string>
    <string name="CommonSecretKey">Secret Key</string>
    <string name="CommonPhone">Phone</string>
    <string name="CommonPassword">Password</string>
    <string name="SignUpAlreadyHaveAccountSignIn">Already have account? Sign in</string>
    <string name="SignUpIAgree">I agree that, I have a device and I follow the terms.</string>
    <string name="SignUpNameRequired">Name required.</string>
    <string name="SignUpPasswordRequired">Enter password</string>
    <string name="SignUpEmailRequired">Enter a valid email address.</string>
    <string name="SignUpPhoneRequired">Phone number required.</string>
    <string name="TcnRequired">Please accept Terms &amp; Condition before SignUp.</string>

    //Login Screen strings
    <string name="LoginAccountSignInLable">Account Sign In</string>
    <string name="SignInBtn">Sign In</string>
    <string name="LoginForgetPassword">Forgot your Password?</string>
    <string name="LoginDontHaveAccount">Don\'t have account? Create new account.</string>

    //Account Settings
    <string name="AccountSettings">Account Settings</string>
    <string name="Submit">Submit</string>

    <string name="OldPassword">Old password</string>
    <string name="NewPassword">New password</string>
    <string name="ConfirmPassword">Confirm password</string>

    //Scheduler Settings
    <string name="SchedulerList">Scheduler List</string>
    <string name="SchedulerAddNew">Add New</string>
    <string name="SchedulerAddNewTask">Add New Task</string>
    <string name="SchedulerUpdateTask">Update Task</string>

    //Timer
    <string name="TimerList">Timer List</string>
    <string name="TimerAddNew">Add New</string>
    <string name="TimerAddNewTask">Add New Task</string>
    <string name="AddWidget">Add Widget</string>

    //Crop Screen
    <string name="Done">Done</string>
    <string name="CropImage">Crop Image</string>
    <string name="ChoosePhoto">Choose Photo</string>
    <string name="ChoosePhotoGallery">From Gallery</string>
    <string name="ChoosePhotoCapture">Take Photo</string>
    <string name="ChoosePhotoReset">Reset Photo</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    //Forget Password
    <string name="ForgotPassword">Forgot password</string>
    <string name="LblForgotPassword">Forgot your password?</string>
    <string name="PFForgotPasswordText">Please enter your email address to reset password. We will send you a link shortly.</string>
    <string name="SendLink">Send Secret Key</string>
    <string name="SetPassword">Set Password</string>

    //Home Screen Items

    <string name="SecurityFeature">Security</string>
    <string name="HomeTimer">Timer</string>
    <string name="HomeScheduler">Scheduler</string>

    <string name="untrusted_cert_dialog_action_ok">Untrusted Certificate</string>
    <string name="untrusted_cert_dialog_action_cancel">Cancel</string>

    <string name="AddTaskTaskName">Task Name</string>
    <string name="SelectDevice">Select Hardware Device</string>
    <string name="SelectAppliance">Select Appliance</string>
    <string name="SelectApplianceLabel">Select appliance do you want to schedule:</string>
    <string name="ApplianceOperation">Select operation for selected appliance:</string>
    <string name="ScheduleDateTime">Select schedule time:</string>
    <string name="SelectTime">Select time:</string>
    <string name="EveryDay">Every Day:</string>
    <string name="WeekDaysfs">Week days:</string>
    <string name="commonOn">ON</string>
    <string name="commonOff">OFF</string>
    <string name="ScheduleBtn">Schedule</string>
    <string name="DefaultTime">00:00 am</string>

    <string name="CommonDescription">Description</string>
    <string name="ContactUsLabel">Contact Us</string>
    <string name="Refresh">Refresh</string>
    <string name="Remove">Remove</string>
    <string name="Rename">Rename</string>
    <string name="ChangePassword">Change Password</string>
    <string name="NoDeviceFound">No device exist in this account. \nClick on (+) plus to setup new device.</string>

    <string name="ActiveDeviceHeading">Active Device:</string>
    <string name="TurnOn">Turn ON </string>
    <string name="TurnOff">Turn OFF </string>
    <string name="EveryDaytxt">Everyday </string>

    <string name="ApplianceDetail">Appliance Detail </string>
    <string name="ApplianceType">Appliance Type </string>
    <string name="ApplianceLabel">Appliance Label </string>
    <string name="ApplianceName">Appliance Name</string>
    <string name="Update">Update</string>

    <string name="RenameAppliance">Rename Appliance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="CommonYes">Yes</string>
    <string name="CommonNo">No</string>

    <string name="DeleteTimerMessage">Are you sure you want to delete this Timer ?</string>
    <string name="DeleteScheduleMessage">Are you sure you want to delete this Schedule ?</string>
    <string name="DeleteTimerTitle">Remove Timer</string>
    <string name="DeleteScheduleTitle">Remove Schedule</string>
    <string name="NewPassworNotMatch">New Password and Confirm Password not match!</string>


    <string name="OldPasswordRequired">Old password Required!</string>
    <string name="NewPasswordRequired">New password Required!</string>
    <string name="ConfirmPasswordRequired">Confirm password Required!</string>

    <string name="PresenceOnline">Online</string>
    <string name="PresenceOffline">Offline</string>
</resources>
