<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_scheduler"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.sharpnode.SchedulerActivity">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        android:isScrollContainer="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/margin_top_30dp"
                android:gravity="center_vertical|center_horizontal"
                android:inputType="textEmailAddress"
                android:text="@string/SignUpCreateAccount"
                android:textColor="@color/colorAppWhite"
                android:visibility="gone"
                android:textSize="@dimen/default_textsize_large">

            </TextView>

            <LinearLayout
                android:id="@+id/layout_fields_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/logo_margin_top"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/edtName"
                    style="@style/edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/CommonName"
                    android:inputType="text">

                    <requestFocus />
                </EditText>

                <include layout="@layout/divider" />

                <EditText
                    android:id="@+id/edtEmailID"
                    style="@style/edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edtName"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:layout_marginTop="@dimen/margin_top_30dp"
                    android:hint="@string/CommonEmailID"
                    android:inputType="textEmailAddress"></EditText>

                <include layout="@layout/divider" />

                <EditText
                    android:id="@+id/edtPhone"
                    style="@style/edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edtEmailID"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:layout_marginTop="@dimen/margin_top_30dp"
                    android:hint="@string/CommonPhone"
                    android:inputType="phone"></EditText>

                <include layout="@layout/divider" />

                <EditText
                    android:id="@+id/edtMessage"
                    style="@style/edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edEmail"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:layout_marginTop="@dimen/margin_top_30dp"
                    android:hint="@string/CommonDescription"
                    android:maxLength="4000"
                    android:minLines="6"></EditText>

                <include layout="@layout/divider" />

                <Button
                    android:id="@+id/btnSubmit"
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_padding_20dp"
                    android:text="@string/Submit"></Button>



            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
