<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top_30dp"
            android:src="@drawable/logo"
            android:id="@+id/ivLogo"
            />

        <EditText
            android:id="@+id/edtOldPassword"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_top_30dp"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/dim_padding_20dp"
            android:gravity="center_vertical"
            android:hint="@string/OldPassword"
            android:inputType="textPassword">

            <requestFocus />
        </EditText>

        <include layout="@layout/divider" />

        <EditText
            android:id="@+id/edtNewPassword"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/dim_padding_10dp"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/dim_padding_20dp"
            android:gravity="center_vertical"
            android:hint="@string/NewPassword"
            android:inputType="textPassword">

        </EditText>

        <include layout="@layout/divider" />

        <EditText
            android:id="@+id/edtConfirmPassword"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/dim_padding_10dp"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/dim_padding_20dp"
            android:gravity="center_vertical"
            android:hint="@string/ConfirmPassword"
            android:inputType="textPassword">

        </EditText>

        <include layout="@layout/divider" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_padding_20dp"
            android:text="@string/Submit"></Button>
    </LinearLayout>
</LinearLayout>
