<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <com.mikepenz.materialdrawer.view.BezelImageView
                android:id="@+id/ivProfilePicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/dim_padding_20dp"
                android:clickable="true"
                android:scaleType="fitXY"
                android:src="@drawable/default_profile"
                app:biv_maskDrawable="@drawable/circle_mask" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtName"
                    style="@style/edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:drawableLeft="@drawable/ic_username"
                    android:drawablePadding="@dimen/dim_padding_20dp"
                    android:gravity="center_vertical"
                    android:hint="@string/CommonName"
                    android:inputType="text" />

                <include layout="@layout/divider" />

                <EditText
                    android:id="@+id/edtEmailID"
                    style="@style/edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edtName"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:layout_marginTop="@dimen/margin_top_30dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="@dimen/dim_padding_20dp"
                    android:hint="@string/CommonEmailID"
                    android:inputType="textEmailAddress"></EditText>

                <include layout="@layout/divider" />

                <EditText
                    android:id="@+id/edtPhone"
                    style="@style/edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edtEmailID"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:layout_marginTop="@dimen/margin_top_30dp"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawablePadding="@dimen/dim_padding_20dp"
                    android:hint="@string/CommonPhone"
                    android:inputType="phone"></EditText>


                <include layout="@layout/divider" />


                <Button
                    android:id="@+id/btnSubmit"
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_padding_20dp"
                    android:text="@string/Submit"></Button>

                <Button
                    android:id="@+id/btnChange"
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_padding_10dp"
                    android:text="@string/ChangePassword"></Button>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>
